<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"
        app:iconifiedByDefault="true"
        android:visible="true"
        />

    <group android:menuCategory="container">
        <item
            android:id="@+id/action_favourites"
            android:title="@string/action_favourites"
            android:icon="@drawable/ic_favorite"
            app:showAsAction="never"
            />

        <item
            android:id="@+id/action_about"
            android:title="@string/action_about"
            app:showAsAction="never"
            android:icon="@drawable/ic_about"
            />

    </group>

</menu>